Complete admin dashboard

--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
     <header>
         <div class="header-top">
             <div class="search-group">
-                <span class="icon"></span>
+                <span class="search-icon"><img src="images/Admin Dashboard TOP Search.png" /></span>
                 <input type="search" />
             </div>
             <div class="avatar-nav-group">
-                <span class="icon"></span>
-                Kevin Munoz
+                <span class="alert-icon"><img src="images/Admin Dashboard TOP Alert.png" /></span>
+                <p>Kevin Munoz</p>
+                <span class="icon"><img src="images/Admin Dashboard TOP Avatar.png" /></span>
             </div>
         </div>
         <div class="header-bottom">
             <div class="avatar-info-group">
-                <span class="main-avatar"></span>
-                Happy <span id="day-of-week"></span>!
+                <p>Happy <span id="day-of-week"></span>!</p>
                 <div class="avatar">
-                Kevin Munoz
+                    <span class="main-avatar"><img src="images/Admin Dashboard TOP Avatar.png" /></span>
+                    Kevin Munoz
                 </div>
             </div>
             <div class="button-group">
@@ -43,41 +44,47 @@
     <nav>
         <div class="list-1 list-container">
             <ul>
-                <li><span class="list-icon"></span> Home</li>
-                <li><span class="list-icon"></span> Profile</li>
-                <li><span class="list-icon"></span> Messages</li>
-                <li><span class="list-icon"></span> History</li>
-                <li><span class="list-icon"></span> Tasks</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Home.png" /></span> Home</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Personal.png" /></span> Profile</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Messages.png" /></span> Messages</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Tasks.png" /></span> Tasks</li>
             </ul>
         </div>
         <div class="list-2 list-container">
             <ul>
-                <li><span class="list-icon"></span> Settings</li>
-                <li><span class="list-icon"></span> Privacy</li>
-                <li><span class="list-icon"></span> Support</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Settings.png" /></span> Settings</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Privacy.png" /></span> Privacy</li>
+                <li><span class="list-icon"><img src="images/Admin Dashboard TOP Support.png" /></span> Support</li>
             </ul>
         </div>
     </nav>
     <main>
-        <div class="main-content-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veniam dignissimos id hic, ea nisi beatae tempora repudiandae numquam perspiciatis autem minima atque? Unde est obcaecati quo deleniti tenetur ipsum?</div>
-        <div class="main-content-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, accusantium quis ipsa ipsum mollitia aut consectetur quod illum ducimus id praesentium omnis! Commodi dolorum perferendis totam ex vel reiciendis numquam?</div>
-        <div class="main-content-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est totam laboriosam sequi, corrupti repellendus quae. Consequatur quod odit debitis eligendi illo facere quia sed, neque accusantium quas quidem assumenda tenetur.</div>
-        <div class="main-content-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, consequuntur perferendis maiores est exercitationem voluptatem ut, sed voluptates iure iste amet earum iusto fugit aliquid libero, fugiat quidem recusandae aliquam.</div>
-        <div class="main-content-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolor, laboriosam nihil veniam atque quaerat harum! Ad doloribus dicta facere doloremque, eius nostrum tempore cupiditate quis? Quod at odio maiores!</div>
-        <div class="main-content-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolor, laboriosam nihil veniam atque quaerat harum! Ad doloribus dicta facere doloremque, eius nostrum tempore cupiditate quis? Quod at odio maiores!</div>
+        <h3>Today's Tasks</h3>
+        <div class="main-content-container">Daily standup with product designers for launch of new website</div>
+        <div class="main-content-container">Client meeting</div>
+        <div class="main-content-container">Create tickets for dev team's next sprint</div>
+        <div class="main-content-container">Approve marketing graphics and share with supervisor</div>
+        <div class="main-content-container">Fix client reported issues on product</div>
+        <div class="main-content-container">Prepare meeting agenda for tomorrow's presentation</div>
 
     </main>
     <aside>
         <div class="aside-1 aside-subcontainer">
             <h3>Announcements</h3>
             <div class="aside-1-content-container aside-content-container">
-
+                <p>The company went into Series C Funding</p>
+                <hr>
+                <p>Come to the office on Tuesday for catered Taco Tuesday. Margaritas after 5pm.</p>
             </div>
         </div>
         <div class="aside-2 aside-subcontainer">
-            <h3>Trending</h3>
+            <h3>Trending News</h3>
             <div class="aside-2-content-container aside-content-container">
-
+                <p>A new dominant omicron strain in the U.S. is driving up cases — and reinfections</p>
+                <hr>
+                <p>Wildfire near Yosemite National Park threatens its largest grove of sequoia trees</p>
+                <hr>
+                <p>A new reality reverberates through Russia's music scene</p>
             </div>
         </div>
     </aside>
